kubernetes/gateway.yml
---
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: quiz-gateway-class
spec:
  controllerName: quiz.wyattlbarnes.com/gateway-controller
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: quiz-gateway
spec:
  gatewayClassName: quiz-gateway-class
  listeners:
    - name: http
      port: 80
      protocol: HTTP
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: quiz-http-route
spec:
  parentRefs:
    - name: quiz-gateway
  rules:
    - matches:
        - path:
          type: PathPrefix
          value: /api
      backendRefs:
        - name: quiz-api-service
    - matches:
        - path:
          type: PathPrefix
          value: /
      backendRefs:
        - name: quiz-app-service
